--- a/pong.qsf
+++ b/pong.qsf
@@ -108,6 +108,9 @@ set_location_assignment PIN_AC28 -to SW1
 set_location_assignment PIN_H15 -to LEDR[17]
 set_location_assignment PIN_G16 -to LEDR[16]
 set_location_assignment PIN_F19 -to LEDR[1]
+set_location_assignment PIN_G19 -to LEDR[0]
+set_location_assignment PIN_G15 -to LEDR[15]
+set_location_assignment PIN_F15 -to LEDR[14]
 set_location_assignment PIN_H17 -to LEDR[13]
 set_location_assignment PIN_J16 -to LEDR[12]
 set_location_assignment PIN_H16 -to LEDR[11]
